--- a/references.bib
+++ b/references.bib
@@ -1371,6 +1371,24 @@
   number = {1-2}
 }
 
+@article{becoulet2011,
+  title = {Steady State Long Pulse Tokamak Operation Using {{Lower Hybrid Current Drive}}},
+  author = {B{\'e}coulet, A. and Hoang, G. T. and Artaud, J. F. and Bae, Y. S. and Belo, J. and {Berger-By}, G. and Bernard, J. M. and Cara, Ph. and Cardinali, A. and Castaldo, C. and Ceccuzzi, S. and Cesario, R. and Cho, M. H. and Decker, J. and Delpech, L. and Do, H. J. and Ekedahl, A. and Garcia, J. and Garibaldi, P. and Goniche, M. and Guilhem, D. and {Hamlyn-Harris}, C. and Hillairet, J. and Huang, Q. Y. and Imbeaux, F. and Jia, H. and Kazarian, F. and Kim, S. H. and Lausenaz, Y. and Litaudon, X. and Maggiora, R. and Magne, R. and Marfisi, L. and Meschino, S. and Milanesio, D. and Mirizzi, F. and Mollard, P. and Namkung, W. and Pajewski, L. and Panaccione, L. and Park, S. and Park, H. and Peysson, Y. and Saille, A. and Samaille, F. and Schettini, G. and Schneider, M. and Sharma, P. K. and Tuccillo, A. and Tudisco, O. and Vecchi, G. and Villari, R. and Vulliez, K. and Wu, Y. and Yang, H. L. and Zeng, Q.},
+  year = {2011},
+  month = oct,
+  volume = {86},
+  pages = {490--496},
+  issn = {0920-3796},
+  doi = {10/fwfz8f},
+  abstract = {Steady-state long pulse operation of tokamaks requires fully non-inductive current drive, thus an external current drive method. Lower Hybrid Current Drive is recognized as one of the most efficient technique used in the present day tokamaks. Progress of the conceptual design of the LHCD ITER relevant system is reported, as well as critical technology issues.},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\NUKXCIX2\\Bécoulet et al_2011_Steady state long pulse tokamak operation using Lower Hybrid Current Drive.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\K3LXW6YW\\S0920379611001104.html},
+  journal = {Fusion Engineering and Design},
+  keywords = {Heating and current drive,ITER,Lower Hybrid Current Drive,Steady-state long pulse tokamak},
+  language = {en},
+  number = {6},
+  series = {Proceedings of the 26th {{Symposium}} of {{Fusion Technology}} ({{SOFT}}-26)}
+}
+
 @article{belenguer2013,
   title = {Krylov's {{Solver Based Technique}} for the {{Cascade Connection}} of {{Multiple}} \${{N}}\$-{{Port Multimodal Scattering Matrices}}},
   author = {Belenguer, A. and Diaz Caballero, E. and Esteban, H. and Borja, A. L. and Cascon, J.},
@@ -3164,6 +3182,19 @@
   journal = {Fusion Engineering and Design},
   language = {en},
   number = {7-8}
+}
+
+@article{buckley1990,
+  title = {Compact Quasi-Periodic and Aperiodic {{TE}}/Sub 0n/ Mode Converters in Overmoded Circular Waveguides for Use with Gyrotrons},
+  author = {Buckley, M.J. and Vernon, R.J.},
+  year = {1990},
+  month = jun,
+  volume = {38},
+  pages = {712--721},
+  issn = {00189480},
+  doi = {10/c4bcts},
+  journal = {IEEE Transactions on Microwave Theory and Techniques},
+  number = {6}
 }
 
 @article{buckley1991,
@@ -4980,6 +5011,7 @@
 }
 
 @article{defaoite2012,
+  ids = {defaoite2012-1},
   title = {A Review of the Processing, Composition, and Temperature-Dependent Mechanical and Thermal Properties of Dielectric Technical Ceramics},
   author = {{de Faoite}, Daith{\'i} and Browne, David J. and {Chang-D{\'i}az}, Franklin R. and Stanton, Kenneth T.},
   year = {2012},
@@ -4988,7 +5020,7 @@
   pages = {4211--4235},
   issn = {0022-2461, 1573-4803},
   doi = {10/b696vr},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Materials and Co\\de Faoite et al. - 2012 - A review of the processing, composition, and tempe.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\W8ED2E67\\de Faoite et al. - 2012 - A review of the processing, composition, and tempe.pdf},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Materials and Co\\de Faoite et al. - 2012 - A review of the processing, composition, and tempe.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\5RIYK4QR\\de Faoite et al_2012_A review of the processing, composition, and temperature-dependent mechanical.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\W8ED2E67\\de Faoite et al. - 2012 - A review of the processing, composition, and tempe.pdf},
   journal = {Journal of Materials Science},
   language = {en},
   number = {10}
@@ -5907,7 +5939,7 @@
 
 @article{dusseaux2000,
   title = {Analysis of {{Rectangular Waveguide H}}-{{Plane Junctions}} in {{Nonorthogonal Coordinate System}}},
-  author = {{Duss' eaux}, R. and Chambelin, P. and Faure, C.},
+  author = {Dusseaux, R. and Chambelin, P. and Faure, C.},
   year = {2000},
   volume = {28},
   pages = {205--229},
@@ -6153,27 +6185,11 @@
   month = nov,
   volume = {50},
   pages = {112002},
+  publisher = {{IOP Publishing}},
   issn = {0029-5515, 1741-4326},
   doi = {10/bqsdtk},
   abstract = {A new ITER-relevant lower hybrid current drive (LHCD) launcher, based on the passive-active-multijunction (PAM) concept, was brought into operation on the Tore Supra tokamak in autumn 2009. The PAM launcher concept was designed in view of ITER to allow efficient cooling of the waveguides, as required for long pulse operation. In addition, it offers low power reflection close to the cut-off density, which is very attractive for ITER, where the large distance between the plasma and the wall may bring the density in front of the launcher to low values. The first experimental campaign on Tore Supra has shown extremely encouraging results in terms of reflected power level and power handling. Power reflection coefficient {$<$}2\% is obtained at low density in front of the launcher, i.e. close to the cut-off density, and very good agreement between the experimental results and the coupling code predictions is obtained. Long pulse operation at ITER-relevant power density has been demonstrated. The maximum power and energy reached so far is 2.7 MW during 78 s, corresponding to a power density of 25 MW m-2, i.e. its design value at f = 3.7 GHz. In addition, 2.7 MW has been coupled at a plasma\textendash{}launcher distance of 10 cm, with a power reflection coefficient {$<$}2\%. Finally, full non-inductive discharges have been sustained for 50 s with the PAM.},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Ekedahl et al._2010_Validation of the ITER-relevant passive-active-multijunction LHCD launcher on long pulses in Tore Supra.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\HD2DPZA7\\Ekedahl et al. - 2010 - Validation of the ITER-relevant passive-active-mul.pdf},
-  journal = {Nuclear Fusion},
-  language = {en},
-  number = {11}
-}
-
-@article{ekedahl2010-1,
-  title = {Validation of the {{ITER}}-Relevant Passive-Active-Multijunction {{LHCD}} Launcher on Long Pulses in {{Tore Supra}}},
-  author = {Ekedahl, A. and Delpech, L. and Goniche, M. and Guilhem, D. and Hillairet, J. and Preynas, M. and Sharma, P. K. and Achard, J. and Bae, Y. S. and Bai, X. and Balorin, C. and Baranov, Y. and Basiuk, V. and B{\'e}coulet, A. and Belo, J. and {Berger-By}, G. and Br{\'e}mond, S. and Castaldo, C. and Ceccuzzi, S. and Cesario, R. and Corbel, E. and Courtois, X. and Decker, J. and Delmas, E. and Ding, X. and Douai, D. and Goletto, C. and Gunn, J. P. and Hertout, P. and Hoang, G. T. and Imbeaux, F. and Kirov, K. K. and Litaudon, X. and Magne, R. and Mailloux, J. and Mazon, D. and Mirizzi, F. and Mollard, P. and Moreau, P. and Oosako, T. and Petrzilka, V. and Peysson, Y. and Poli, S. and Prou, M. and {Saint-Laurent}, F. and Samaille, F. and Saoutic, B.},
-  year = {2010},
-  month = sep,
-  volume = {50},
-  pages = {112002},
-  publisher = {{IOP Publishing}},
-  issn = {0029-5515},
-  doi = {10/bqsdtk},
-  abstract = {A new ITER-relevant lower hybrid current drive (LHCD) launcher, based on the passive-active-multijunction (PAM) concept, was brought into operation on the Tore Supra tokamak in autumn 2009. The PAM launcher concept was designed in view of ITER to allow efficient cooling of the waveguides, as required for long pulse operation. In addition, it offers low power reflection close to the cut-off density, which is very attractive for ITER, where the large distance between the plasma and the wall may bring the density in front of the launcher to low values. The first experimental campaign on Tore Supra has shown extremely encouraging results in terms of reflected power level and power handling. Power reflection coefficient {$<$}2\% is obtained at low density in front of the launcher, i.e. close to the cut-off density, and very good agreement between the experimental results and the coupling code predictions is obtained. Long pulse operation at ITER-relevant power density has been demonstrated. The maximum power and energy reached so far is 2.7 MW during 78 s, corresponding to a power density of 25 MW m-2, i.e. its design value at f = 3.7 GHz. In addition, 2.7 MW has been coupled at a plasma\textendash{}launcher distance of 10 cm, with a power reflection coefficient {$<$}2\%. Finally, full non-inductive discharges have been sustained for 50 s with the PAM.},
-  file = {C\:\\Users\\JH218595\\Zotero\\storage\\SAQ6G7GF\\Ekedahl et al_2010_Validation of the ITER-relevant passive-active-multijunction LHCD launcher on.pdf},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Ekedahl et al._2010_Validation of the ITER-relevant passive-active-multijunction LHCD launcher on long pulses in Tore Supra.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\HD2DPZA7\\Ekedahl et al. - 2010 - Validation of the ITER-relevant passive-active-mul.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\SAQ6G7GF\\Ekedahl et al_2010_Validation of the ITER-relevant passive-active-multijunction LHCD launcher on.pdf},
   journal = {Nuclear Fusion},
   language = {en},
   number = {11}
@@ -8062,6 +8078,16 @@
   language = {en}
 }
 
+@inproceedings{guilhem2009,
+  title = {Passive {{Active Multi}}-{{Junction}} 3, 7 {{GHZ}} Launcher for {{Tore}}-{{Supra Long Pulse Experiments}}. {{Manufacturing Process}} and {{Tests}}},
+  booktitle = {{{RADIO FREQUENCY POWER IN PLASMAS}}: {{Proceedings}} of the 18th {{Topical Conference}}},
+  author = {Guilhem, D. and Achard, J. and Belo, J. and Bertrand, B. and Bej, Z. and Bibet, Ph. and Brun, C. and Chantant, M. and Delmas, E. and Delpech, L. and Doceul, Y. and Ekedahl, A. and Goletto, C. and Goniche, M. and Hatchressian, J. C. and Hillairet, J. and Houry, M. and Joubert, P. and Lipa, M. and Madeleine, S. and Martinez, A. and Missirlian, M. and Poli, S. and Portafaix, C. and Raulin, D. and Saille, A. and Soler, B. and Thouvenin, D. and Verger, J. M. and Vulliez, K. and Zago, B. and Bobkov, Volodymyr and Noterdaeme, Jean-Marie},
+  year = {2009},
+  pages = {435--438},
+  address = {{Gent (Belgium)}},
+  doi = {10/dz4ksm}
+}
+
 @article{guilhem2011,
   title = {Manufacturing Process and Tests of a {{Lower Hybrid Passive}}\textendash{{Active Multijunction}} Launcher for Long Pulse Experiments on {{Tore}}-{{Supra}}},
   author = {Guilhem, D. and Samaille, F. and Bertrand, B. and Lipa, M. and Achard, J. and Agarici, G. and Argouarch, A. and Armitano, A. and Belo, J.H. and Bej, Z. and {Berger-By}, G. and Bouquey, F. and Brun, C. and Chantant, M. and {E.Corbel} and Delmas, E. and Delpech, L. and Doceul, L. and Ekedahl, A. and Faisse, F. and Fejoz, P. and Goletto, C. and Goniche, M. and Hatchressian, J.C. and Hillairet, J. and Houry, M. and Joanard, J.P. and Joubert, P. and Lambert, R. and Lombard, G. and Lyonne, M. and Madeleine, S. and Magne, R. and Marfisi, L. and Martinez, A. and Maury, M. and Missirlian, M. and Mollard, P. and Poli, S. and Portafaix, C. and Preynas, M. and Prou, M. and Raulin, D. and Rousset, E. and Saille, A. and Soler, B. and Thouvenin, D. and Verger, J.M. and Volpe, D. and Vulliez, K. and Zago, B.},
@@ -8986,6 +9012,21 @@
   language = {English}
 }
 
+@article{hillairet2009-2,
+  title = {Validation of the {{LH}} Antenna Code {{ALOHA}} against {{Tore Supra}} Experiments},
+  author = {Hillairet, J. and Ekedahl, A. and Ko{\v c}an, M. and Gunn, J. P. and Goniche, M.},
+  year = {2009},
+  month = nov,
+  volume = {1187},
+  pages = {375--378},
+  publisher = {{American Institute of Physics}},
+  issn = {0094-243X},
+  doi = {10/b7xgtr},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\QQN6U6YH\\1.html},
+  journal = {AIP Conference Proceedings},
+  number = {1}
+}
+
 @techreport{Hillairet2009c,
   title = {Spectres Des Antennes \{\vphantom\}{{LH}}\vphantom\{\} de {{Tore}}-{{Supra}} En Fonction Des Phases Relatives Entre Modules},
   author = {Hillairet, Julien},
@@ -9065,7 +9106,6 @@
   title = {Recent Progress on Lower Hybrid Current Drive and Implications for {{ITER}}},
   author = {Hillairet, J. and Ekedahl, A. and Goniche, M. and Bae, Y.S. and Achard, J. and Armitano, A. and Beckett, B. and Belo, J. and {Berger-By}, G. and Bernard, J.M. and Corbel, E. and Delpech, L. and Decker, J. and Dumont, R. and Guilhem, D. and Hoang, G.T. and Kazarian, F. and Kim, H.J. and Litaudon, X. and Magne, R. and Marfisi, L. and Mollard, P. and Namkung, W. and Nilsson, E. and Park, S. and Peysson, Y. and Preynas, M. and Sharma, P.K. and Prou, M. and {the Tore Supra Team}},
   year = {2013},
-  month = jul,
   volume = {53},
   pages = {073004},
   issn = {0029-5515, 1741-4326},
@@ -9309,6 +9349,14 @@
   journal = {Nuclear Fusion},
   language = {en},
   number = {7}
+}
+
+@techreport{hoang2009-2,
+  title = {"{{LH4ITER}}" {{EFDA Task}}},
+  author = {Hoang, G T},
+  year = {2009},
+  institution = {{EDFA}},
+  number = {WP09-HCD-08-03-01}
 }
 
 @techreport{Hoang2010,
@@ -11163,6 +11211,15 @@
   number = {4}
 }
 
+@article{kim2012,
+  title = {Fabrication of {{KSTAR}} 5 {{GHz LHCD}} Launcher Coupler},
+  author = {Kim, K. and Kim, H. K. and Kim, H. T.},
+  year = {2012},
+  month = may,
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\XR3HT2BJ\\search.html},
+  language = {English}
+}
+
 @article{kim2015,
   title = {{{RF}} Design and Tests on a Broadband, High-Power Coaxial Quadrature Hybrid Applicable to {{ITER ICRF}} Transmission Line System for Load-Resilient Operations},
   author = {Kim, Hae Jin and Wang, Son Jong and Park, Byoung Ho and Kwak, Jong-Gu and Hillairet, Julien and Choi, Jin Joo},
@@ -11566,6 +11623,22 @@
   isbn = {978-3-319-07187-9 978-3-319-07188-6},
   language = {en},
   series = {Particle {{Acceleration}} and {{Detection}}}
+}
+
+@article{klopfenstein1956,
+  title = {A {{Transmission Line Taper}} of {{Improved Design}}},
+  author = {Klopfenstein, R. W.},
+  year = {1956},
+  month = jan,
+  volume = {44},
+  pages = {31--35},
+  issn = {2162-6634},
+  doi = {10/bfm77p},
+  abstract = {The theory of the design of optimal cascaded transformer arrangements can be extended to the design of continuous transmission-line tapers. Convenient relationships have been obtained from which the characteristic impedance contour for an optimal transmission-line taper can be found. The performance of the Dolph-Tchebycheff transmission-line taper treated here is optimum in the sense that it has minim reflection coefficient magnitude in the pass band for a specified length of taper, and, likewise, for a specified maximum magnitude reflection coefficient in the pass band, the Dolph-Tchebycheff taper has minimum length. A sample design has been carried out for the purposes of illustration, and its performance has been compared with that of other tapers. In addition, a table of values of a transcendental function used in the design of these tapers is given.},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\XHQM7EFN\\4051841.html},
+  journal = {Proceedings of the IRE},
+  keywords = {Admittance,Differential equations,Fourier transforms,Impedance matching,Propagation constant,Reflection,Transmission line theory,Transmission lines,Voltage},
+  number = {1}
 }
 
 @techreport{Knowlton1986,
@@ -12407,6 +12480,19 @@
   number = {3}
 }
 
+@article{lee2008,
+  title = {Summary of the 5th {{IAEA Technical Meeting}} on {{Steady State Operation}} of {{Magnetic Fusion Devices}} ({{Daejeon}}, {{Republic}} of {{Korea}}, 14\textendash{}17 {{May}} 2007)},
+  author = {Lee, G.S. and Na, Yong-Su and Becoulet, A. and Ide, S. and Kessel, C.E. and Komori, A. and Kuteev, B.V. and Mank, G. and Olstad, R.A. and Sarkar, B. and Sips, A.C.C. and {van Houtte}, D. and Vdovin, V.L.},
+  year = {2008},
+  month = aug,
+  volume = {48},
+  pages = {087001},
+  issn = {0029-5515, 1741-4326},
+  doi = {10/dtcc5x},
+  journal = {Nuclear Fusion},
+  number = {8}
+}
+
 @article{lefloch2014,
   title = {Dielectric Material Characterization Techniques and Designs of High-{{Q}} Resonators for Applications from Micro to Millimeter-Waves Frequencies Applicable at Room and Cryogenic Temperatures},
   shorttitle = {Invited {{Article}}},
@@ -12908,6 +12994,19 @@
   school = {Universit? de Provence}
 }
 
+@article{litaudon1990,
+  title = {Coupling of Slow Waves near the Lower Hybrid Frequency in {{JET}}},
+  author = {Litaudon, X. and Moreau, D.},
+  year = {1990},
+  month = mar,
+  volume = {30},
+  pages = {471--484},
+  issn = {0029-5515, 1741-4326},
+  doi = {10/bcv5nd},
+  journal = {Nuclear Fusion},
+  number = {3}
+}
+
 @article{litaudon1992,
   title = {Lower Hybrid Wave Coupling in {{TORE SUPRA}} through Multijunction Launchers},
   author = {Litaudon, X and {Berger-by}, G and Bibet, P and Bizarro, J.P and Capitain, J.J and Carrasco, J and Goniche, M and Hoang, G.T and Kupfer, K and Magne, R and Moreau, D and Peysson, Y and Rax, J.-M and Rey, G and Rigaud, D and Tonon, G},
@@ -13085,6 +13184,14 @@
   note = {OCLC: ocn297148669}
 }
 
+@inproceedings{lorkiewicz2001,
+  title = {Surface {{Tin Coating}} of {{Tesla Couplers}} at {{Desy}} as an {{Antimultipactor Remedy}}},
+  author = {Lorkiewicz, J. and Brinkmann, Andreas and Dwersteg, Bernhard and Kostin, Denis and Layalan, M.},
+  year = {2001},
+  abstract = {A development project was carried out at DESY, aimed at reducing secondary electron emission and multipactor effects in TESLA couplers by TiN layers generation on surfaces which were not protected in this way previously. Thin TiN films on ceramic or metallic surfaces were produced by deposition from Ti vapor in low pressure ammonia. Selection of processing parameters and their effect on multipactor suppression in RF field have been studied using a multipactor test resonator at DESY. Appropriate values of deposition rate, substrate temperature, final layer thickness and chemical conversion procedure were selected. A significant reduction of multipactor time during RF tests was reached due to surface coating. Chemical analysis of TiN layers on both ceramic and metallic substrates has been performed using SIMS method. TiN coating of more than 80 wave guide and cylindrical RF windows were performed for TTF2, TTF3 and TTF4 versions of TESLA couplers. Surface processing of flat wave guide windows for TTF2 resulted in significant reduction of multipactor effects and improvement of power transmission. Their good performance remained unchanged after 24-hour exposition to air. TiN coating of all vacuum-facing surfaces of TTF2 coupler led to reduction of the indispensable RF conditioning time from typically 3 days down to 4-6 hours.},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\KA4CLGRR\\Lorkiewicz et al_2001_SURFACE TiN COATING OF TESLA COUPLERS AT DESY AS AN ANTIMULTIPACTOR REMEDY.pdf}
+}
+
 @techreport{Lorkiewicz2004,
   title = {Anti-Multipactor {{TiN}} Coating of {{RF}} Power Coupler Components for {{TESLA}} at {{DESY}}},
   author = {Lorkiewicz, J and Brinkmann, A and Dwersteg, B and Kostin, D and Layalan, M},
@@ -13092,6 +13199,18 @@
   pages = {1--40},
   institution = {{TESLA Report 2004-02}},
   keywords = {\#nosource,Multipactor,TiN}
+}
+
+@techreport{lorkiewicz2004,
+  title = {Anti-Multipactor {{TiN}} Coating of {{RF}} Power Coupler Components for {{TESLA}} at {{DESY}}},
+  author = {Lorkiewicz, J},
+  year = {2004},
+  pages = {40},
+  abstract = {A development project was carried out at DESY, aimed at reducing secondary electron emission and multipactor effects in TESLA couplers by TiN layers generation on surfaces which were not protected in this way previously. Thin TiN films on ceramic or metallic surfaces were produced by deposition from Ti vapor in low pressure ammonia. Selection of processing parameters and their effect on multipactor suppression in RF field have been studied using a multipactor test resonator at DESY. Appropriate values of deposition rate, substrate temperature, final layer tickness and chemical conversion procedure were selected. A significant reduction of multipactor time during RF tests was reached due to surface coating. Chemical analysis of TiN layers on both ceramic and metallic substrates has been performed using SIMS method. TiN coating of more than 80 waveguide and cylindrical RF windows were done for TTF2, TTF3 and TTF4 versions of TESLA couplers. Surface processing of flat waveguide windows for TTF2 resulted in significant reduction of multipactor effects and improvement of power transmission. Their good performance remained unchanged after 24-hour exposition to air. TiN coating of all vacuum-facing surfaces of a TTF2 coupler led to reduction of the indispensable RF conditioning time at a pulse length of 20 \textmu{}s from typically 3 days down to 4.5 hours. The above activities are considered a preparatory step for the future large-scale anti-multipactor protective coating of TESLA couplers.},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\FK5ISKMG\\Lorkiewicz - Anti-multipactor TiN coating of RF power coupler c.pdf},
+  keywords = {⛔ No DOI found},
+  language = {en},
+  number = {TESLA Report 2004-02}
 }
 
 @article{loth1956,
@@ -15029,6 +15148,13 @@
   school = {Universit{\'e} de Provence, Aix-Marseille I}
 }
 
+@phdthesis{moreau1993,
+  title = {Utilisation {{D}}'ondes {{De Plasma Pour Creer Dans Les Tokamaks Les Conditions Quasi}}-{{Stationnaires Necessaires}} a {{La Fusion Controlee}}},
+  author = {Moreau, Didier},
+  year = {1993},
+  school = {Aix Marseille Universit{\'e}}
+}
+
 @article{moreau2007,
   title = {{{RF}} Heating Optimization on {{Tore Supra}} Using Feedback Control of Infrared Measurements},
   author = {Moreau, Ph. and Barana, O. and Br{\'e}mond, S. and Colas, L. and Ekedahl, A. and {Saint-Laurent}, F. and Balorin, C. and Caulier, G. and Desgranges, C. and Guilhem, D. and Jouve, M. and Kazarian, F. and Lombard, G. and Millon, L. and Mitteau, R. and Mollard, P. and Roche, H. and Travere, J.M.},
@@ -15188,13 +15314,15 @@
 }
 
 @article{motley1980,
+  ids = {motley1980-1},
   title = {Active-{{Passive Waveguide Array}} for {{Wave Excitation}} in {{Plasmas}}},
   author = {Motley, R W and Hooke, W M},
   year = {1980},
   pages = {4},
+  publisher = {{IOP Publishing}},
   doi = {10/b67dtn},
   abstract = {A modified version of the standard waveguide grill for exciting lower hybrid plasma waves is proposed. This version, consisting of alternate active and passive elements, permits a number of important engineering simplifications and also reduces the amplitude of the (undesirable) surface component of the wavenumber spectrum. Results from a simple two-element array excited at low power are presented.},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\Motley, Hooke_1979_Active-passive waveguide array for wave excitation in plasmas.pdf},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\Motley, Hooke_1979_Active-passive waveguide array for wave excitation in plasmas.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\8I8GHWXI\\Motley_Hooke_1980_Active-passive waveguide array for wave excitation in plasmas.pdf},
   journal = {NUCLEAR FUSION},
   language = {en}
 }
@@ -16396,10 +16524,9 @@ simulation capabilities, diagnostic analysis tools, and the plan for base data s
   number = {1}
 }
 
-@article{parker,
+@misc{parker,
   title = {Recent Results from Lower Hybrid Current Drive Experiments on {{Alcator C}}-{{Mod}}},
   author = {Parker, R R and Porkolab, M and Rice, J E and Schmidt, A E and Scott, S D and Shiraiwa, S and Wallace, G M and Wukitch, S and Wilson, J R},
-  pages = {17},
   file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Parker et al._2010_Recent results from lower hybrid current drive experiments on Alcator C-Mod.pdf},
   keywords = {⛔ No DOI found},
   language = {en}
@@ -18597,6 +18724,23 @@ It is shown that TS ICRF generators are not able to deliver the required power i
   language = {en}
 }
 
+@article{schelkunoff1952,
+  title = {Generalized {{Telegraphist}}'s {{Equations}} for {{Waveguides}}},
+  author = {Schelkunoff, S. A.},
+  year = {1952},
+  volume = {31},
+  pages = {784--801},
+  issn = {1538-7305},
+  doi = {10/ggc265},
+  abstract = {In this paper Maxwell's partial differential equations and the boundary conditions for waveguides filled with a heterogeneous and non-isotropic medium are converted into an infinite system of ordinary differential equations. This system represents a generalization of ``telegraphist's equations'' for a single mode transmission to the case of multiple mode transmission. A similar set of equations is obtained for spherical waves. Although such generalized telegraphist's equations are very complicated, it is very likely that useful results can be obtained by an appropriate modal analysis.},
+  copyright = {\textcopyright{} 1952 The Bell System Technical Journal},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\4I6JMZU9\\Schelkunoff_1952_Generalized Telegraphist's Equations for Waveguides.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\FMPACG9H\\j.1538-7305.1952.tb01406.html},
+  journal = {Bell System Technical Journal},
+  language = {en},
+  note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/j.1538-7305.1952.tb01406.x},
+  number = {4}
+}
+
 @book{schelkunoff1952antennas,
   ids = {Schelkunoff1952},
   title = {Antennas: Theory and Practice},
@@ -18606,6 +18750,23 @@ It is shown that TS ICRF generators are not able to deliver the required power i
   file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Books\\Schelkunoff, Friis_1952_Antennas - Theory and Practive.pdf},
   lccn = {52005083},
   series = {Applied Mathematics Series}
+}
+
+@article{schelkunoff1955,
+  title = {Conversion of {{Maxwell}}'s {{Equations}} into {{Generalized Telegraphist}}'s {{Equations}}*},
+  author = {Schelkunoff, S. A.},
+  year = {1955},
+  volume = {34},
+  pages = {995--1043},
+  issn = {1538-7305},
+  doi = {10/ggc23w},
+  abstract = {In this paper it is explained how Maxwell's field equations together with the appropriate boundary conditions may be converted into equations analogous to those for coupled transmission lines. This makes it possible to use the well-known techniques of dealing with transmission lines to solve certain field problems in those cases in which either the method of separating the variables fails or the boundary conditions are too complicated for the conventional method. For example, this method may be applied to studying waveguide to horn junctions, bending of waveguides, propagation of waves over an imperfect earth in the vicinity of the source, etc. Other applications are suggested in the course of the paper. On the theoretical side, this conversion of field equations into transmission line equations brings together two heretofore independent theories of wave propagation on wires, namely, Lord Kelvin's theory based on circuit concepts and Kirchhoff's laws and Mie's theory based on field concepts and Maxwell's equations. The ``Generalized Telegraphist's Equations'' derived in this paper differ from Kelvin's classical Telegraphist's Equations in two respects. Firstly, for a pair of conductors Kelvin obtained one pair of differential equations implying the existence of only one mode of propagation. For the same pair of conductors we obtain an infinite set of equations implying an infinite number of modes, from which Kelvin's equations are obtained by neglecting the coupling between the principal mode and the higher order modes. Secondly, our equations for some transmission structures contain additional ``circuit parameters'' which do not appear in the classical equations. These parameters are of the same nature as those in the corresponding equations for waveguides of uniform cross-section with perfectly conducting walls and filled with heterogeneous dielectric medium. In the present case they arise from the boundaries of conductors rather from lack of homogeneity. The mathematics of converting Maxwell's Equations into Generalized Telegraphist's Equations is straightforward, although in the most general cases rather lengthy. The essential point is that a function, which for practical purposes is sufficiently arbitrary, may be represented in numerous ways by a series of orthogonal functions; and that when some such series are non-differentiable, the required relations between the coefficients of series representing the various field components may be obtained from Maxwell's equations by integration rather than by conventional substitution followed by differentiation.},
+  copyright = {\textcopyright{} 1955 The Bell System Technical Journal},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\LM8H3WY8\\Schelkunoff_1955_Conversion of Maxwell's Equations into Generalized Telegraphist's Equations.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\2QBUHG4I\\j.1538-7305.1955.tb03787.html},
+  journal = {Bell System Technical Journal},
+  language = {en},
+  note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/j.1538-7305.1955.tb03787.x},
+  number = {5}
 }
 
 @book{Schlesinger2010,
@@ -20460,14 +20621,29 @@ Multipactor analysis for different structures were performed, and the breakdown 
   keywords = {\#nosource}
 }
 
-@article{thumm,
+@article{thumm1987,
   title = {Teo3 to {{Teol Mode Converters}} for {{Use}} with a 150 {{Ghz Gyrotron}}},
   author = {Thumm, M and Kumric, H},
+  year = {1987},
   pages = {14},
   abstract = {Two-step high-power TEO3-to-TE01 mode transducers (TE02 is the intermediate mode) were designed to transform the TE03 output mode of the 150 GHz KfK gyrotron into the fundamental circular symmetric TE01 mode for low-loss propagation and further conversion into the linearly polarized quasioptical HEll mode. The advanced perturbation structures of the rippled-wall mode converters (with input- and outputdiameter D = 27.8 mm) were optimized by numerically solving the proper coupled-wave differential equations. The overall TE03-to-TE01 conversion efficiency at 150 GHz was calculated to be no = 99.1\% for a long converter (total length L = 2.67 m) and qO = 97.8\% for a short converter (L = 1.07 m); ohmic attenuation is included. The corresponding theoretical bandwidth (for n \textasciitilde{} 9 5 \% ) i s \textbullet{} GHz and \textbullet{} GHz, respectively. Low-power experimental data are in excellent agreement with these computed values.},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\RF - Electromagnetism\\Thumm, Kumric, Stickel_1987_TE03 to TE01 mode converters for use with a 150 GHz gyrotron.pdf},
   keywords = {⛔ No DOI found},
   language = {en}
+}
+
+@article{thumm1987-1,
+  title = {{{TE03}} to {{TE01}} Mode Converters for Use with a 150 {{GHz}} Gyrotron},
+  author = {Thumm, M. and Kumric, H. and Stickel, H.},
+  year = {1987},
+  month = mar,
+  volume = {8},
+  pages = {227--240},
+  issn = {0195-9271, 1572-9559},
+  doi = {10/b97ghk},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\RF - Electromagnetism\\Thumm, Kumric, Stickel_1987_TE03 to TE01 mode converters for use with a 150 GHz gyrotron.pdf},
+  journal = {International Journal of Infrared and Millimeter Waves},
+  language = {en},
+  number = {3}
 }
 
 @article{thumm1991,
@@ -20899,6 +21075,23 @@ Multipactor analysis for different structures were performed, and the breakdown 
   journal = {The Nucleus},
   keywords = {⛔ No DOI found},
   language = {en},
+  number = {4}
+}
+
+@article{unger1958,
+  title = {Circular {{Waveguide Taper}} of {{Improved Design}}},
+  author = {Unger, Hans-Georg},
+  year = {1958},
+  volume = {37},
+  pages = {899--912},
+  issn = {1538-7305},
+  doi = {10/ggc254},
+  abstract = {Transitions between round waveguides of different sizes for TE01 transmission are required to be free of mode conversion. Conical tapers with a gradual change of cone angle transform cylindrical waves in the round waveguide into spherical waves in the transition region. They thus cause very little power conversion to spurious modes. Optimal tapers and almost optimal tapers are found. An improved taper connecting 7/8 in. to 2 in. i.d. waveguide must be 3 ft long to keep the spurious mode level below \textemdash{}50 db for frequencies up to 75 kmc. A taper of constant cone angle would have to be 58 ft long to obtain the same spurious mode level.},
+  copyright = {\textcopyright{} 1958 The Bell System Technical Journal},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\L8F4YPNE\\Unger_1958_Circular Waveguide Taper of Improved Design.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\WMYNDST5\\j.1538-7305.1958.tb01535.html},
+  journal = {Bell System Technical Journal},
+  language = {en},
+  note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/j.1538-7305.1958.tb01535.x},
   number = {4}
 }
 
@@ -21804,6 +21997,22 @@ Multipactor analysis for different structures were performed, and the breakdown 
   journal = {Nuclear Fusion},
   language = {en},
   number = {7}
+}
+
+@article{wang2009,
+  title = {Design of a {{TE}} 10 \textendash{{TE}} 30 {{Rectangular Mode Converter}} for 4.6 {{GHz LHCD Launcher}} in the {{Experimental Advanced Superconducting Tokamak}}},
+  author = {Wang, Xiao-Jie and Liu, Fu-Kun and Zhao, Lian-Min and Jia, Hua and Liu, Hong-Bao and Kuang, Guang-Li},
+  year = {2009},
+  month = feb,
+  volume = {26},
+  pages = {025202},
+  publisher = {{IOP Publishing}},
+  issn = {0256-307X},
+  doi = {10/bmq8t5},
+  abstract = {A compact rectangular TE10\textendash{}TE30 mode converter is developed for the lower hybrid current drive (LHCD) launcher on the Experimental Advanced Superconducting Tokamak (EAST) at 4.6 GHz. The converter with periodic width perturbation aims to divide the microwave power into three sub-waveguides in the poloidal direction. We present the design and numerical calculation of the mode converter. Calculations are performed on the ripple wall converter by codes based on numerical solving the coupled-mode differential equations and on the simulation of the High Frequency Structure Simulator (HFSS) package. The resulting conversion efficiency from TE10 mode to TE30 mode exceeds 95\% within the bandwidth from 4.56 GHz to 4.64 GHz, and the return loss of the oversized transducer can be considerably decreased to 0.068\% by means of a capacitive button embedded in the E-plane of the waveguide.},
+  journal = {Chinese Physics Letters},
+  language = {en},
+  number = {2}
 }
 
 @article{wang2010,
@@ -23161,6 +23370,18 @@ Multipactor analysis for different structures were performed, and the breakdown 
   title = {Design and {{RF}} Measurements of a 5 {{GHz}} 500 {{kW}} Window for the {{ITER LHCD}} System: {{AIP Conference Proceedings}}: {{Vol}} 1580, {{No}} 1},
   file = {C\:\\Users\\JH218595\\Zotero\\storage\\92DS58R3\\1.html},
   howpublished = {https://aip.scitation.org/doi/abs/10.1063/1.4864591}
+}
+
+@misc{zotero-8869,
+  title = {{{INIS Repository Search}} - {{Single Result}}},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\CF8TZLSB\\searchsinglerecord.html},
+  howpublished = {https://inis.iaea.org/search/searchsinglerecord.aspx?recordsFor=SingleRecord\&RN=43073728}
+}
+
+@misc{zotero-8893,
+  title = {Compact Quasi-Periodic and Aperiodic {{TE}}/Sub 0n/ Mode Converters in Overmoded Circular Waveguides for Use with Gyrotrons - {{IEEE Journals}} \& {{Magazine}}},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\DKHR4S76\\130965.html},
+  howpublished = {https://ieeexplore.ieee.org/abstract/document/130965}
 }
 
 
