--- a/tex/chap1.tex
+++ b/tex/chap1.tex
@@ -364,7 +364,7 @@ line to separate the pressurized part of the line from the vacuum part of the li
 % #####################################################
 % #####################################################
 \subsubsection{Antennas}\label{sec:RF_antennas}
-\marginnote{In the litterature, the terms \textit{launchers} or \textit{couplers} are sometime used in the fusion community to distinct LHCD antennas from ICRH antennas. In this document, we do not make any difference between these terms, they are all radiating elements. }
+\marginnote{In the literature, the terms \textit{launchers} or \textit{couplers} are sometime used in the fusion community to distinct LHCD antennas from ICRH antennas. In this document, we do not make any difference between these terms, they are all radiating elements. }
 
 Being inserted in machine's ports, ICRH and LHCD antennas are facing the plasma and therefore must  withstand harsh operational constraints: 
 \begin{itemize}
